# dmmt-jpeg-encoder

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: binary_stream.rs  cli.rs  color.rs  cosine_transform.rs  error.rs  huffman.rs  image.ppm  image.rs  lib.rs  logger.rs  main.rs  ppm_parser.rs  sheet2_1.rs
src/cosine_transform/: arai.rs  separated.rs  simple.rs
src/huffman/: code.rs  coding_error.rs  encoder.rs  length_limited.rs  tree.rs
src/image/: encoder.rs  ppm_parser.rs  reader.rs  subsampling.rs  transformer.rs
src/image/reader/: padder.rs  ppm.rs
src/image/writer/: jpeg.rs
src/image/writer/jpeg/: encoder.rs  padder.rs  quantization_tables.rs  quantizer.rs  segment_marker_injector.rs  transformer.rs
src/image/writer/jpeg/encoder/: block_fold_iterator.rs
src/image/writer/jpeg/transformer/: block_entangler.rs  categorize.rs  frequency_block.rs  quantizer.rs  symbol_counting.rs
tests/: 16x16.jpg.hexer  16x16.ppm  500x500.ppm  7x17.ppm  8x8.ppm  convert_ppm_to_jpeg.rs  decoding.txt  small.ppm
